Navbar + alignment fixed.

--- a/tournament-base.css
+++ b/tournament-base.css
@@ -1,7 +1,11 @@
 #outer {
-    width: 1200px;
+    width: 1250px;
     margin: 0 auto;
 	padding-top: 10px;
+}
+
+#outer .container {
+	width: 1200px;	
 }
 
 .player, .info {
@@ -26,14 +30,15 @@
 }
 
 .player .name, .info .name{
-    display: inline-block;
-    width: 300px;
-    font-size: 1.75em;
+	display: inline-block;        
+    font-size: 1.75em;	
 }
 
 .info .game {
     display: inline-block;
 	font-size: 1.25em;
+	height: 14px;
+	vertical-align: bottom;
 }
 
 .player .score {
@@ -52,28 +57,26 @@ input {
 	margin-right: 20px;
 }
 
-.details, .none,  .explain {
+.explain {
     font-size: 1.45em;
     border-style: none dashed dashed dashed;
     border-color: #ccc;
     border-width: 2px;
 	border-radius: 20px 10px;
-    margin: 0px 10px;
-    padding: 10px;	
+    margin: 0px 0px 20px 0px;
+    padding: 4px;
+	
 }
 
 .details, .none {
+	font-size: 1.45em;
 	border-style: none none dashed none;
 	border-color: #ccc;
 	border-width: 2px;
 	border-radius: 5px 2px;
+	margin: 0px 10px;
+    padding: 10px;	
 	margin-bottom: 5px;	
-}
-
-.explain {
-	margin: 10px 0px;
-	padding-bottom: 12px;
-	font-weight: bold;
 }
 
 .none {
@@ -82,6 +85,11 @@ input {
 
 .inc, .dec {
   cursor: pointer;
+}
+
+.d3vis {	
+	float: left;
+	padding-right: 5px;
 }
 
 text {
